added admin files

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 /public/build
 /public/hot
 /public/storage
+/public/uploads
 /storage/*.key
 /vendor
-
+.env
 .env.backup
 .env.production
 .phpunit.result.cache
